@@ -8,8 +8,10 @@ import com.gentics.mesh.cli.BootstrapInitializer;
 import com.gentics.mesh.core.image.spi.ImageManipulator;
 import com.gentics.mesh.etc.config.HttpServerConfig;
 import com.gentics.mesh.etc.config.MeshOptions;
+import com.gentics.mesh.graphdb.spi.Database;
 import com.gentics.mesh.handler.impl.MeshBodyHandlerImpl;
 import com.gentics.mesh.image.ImgscalrImageManipulator;
+import com.hazelcast.core.HazelcastInstance;
 
 import dagger.Module;
 import dagger.Provides;
@@ -94,6 +96,12 @@ public class MeshModule {
 		handler.setMergeFormAttributes(false);
 		handler.setDeleteUploadedFilesOnEnd(true);
 		return handler;
+	}
+
+	@Provides
+	@Singleton
+	public static HazelcastInstance hazelcast(Database db) {
+		return (HazelcastInstance) db.clusterManager().getHazelcast();
 	}
 
 }
