@@ -1,0 +1,29 @@
+package com.gentics.mesh.distributed.coordinator;
+
+public class MasterServer {
+
+	private String host;
+	private int port;
+
+	public MasterServer(String host, int port) {
+		this.host = host;
+		this.port = port;
+	}
+
+	public String getHost() {
+		return host;
+	}
+
+	public void setHost(String host) {
+		this.host = host;
+	}
+
+	public int getPort() {
+		return port;
+	}
+
+	public void setPort(int port) {
+		this.port = port;
+	}
+
+}
