@@ -100,6 +100,7 @@
 		<module>changelog-system</module>
 		<module>databases</module>
 		<module>services</module>
+		<module>distributed-coordinator</module>
 		<module>core</module>
 		<module>performance-tests</module>
 		<module>verticles</module>
